// Copyright 2021 Harness Inc. All rights reserved.
// Use of this source code is governed by the PolyForm Shield 1.0.0 license
// that can be found in the licenses directory at the root of this repository, also available at
// https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.

syntax = "proto3";

package io.harness.perpetualtask.instancesync;

option java_multiple_files = true;

message PdcPerpetualTaskParamsNg {
  string account_id = 1;
  string service_type = 2;
  repeated string hosts = 3;
  int32 port = 4;
  string infrastructure_key = 5;
}
